cosmic/macros/condor_log/condor_cosmic_1.err
In file included from input_line_8:1:
/direct/sphenix+tg+tg01/commissioning/INTT/work/weiche/my_INTT/cosmic/macros/CosmicTracking_Fun4All.C:17:23: error: invalid operands to binary expression ('const char [2]' and 'const char [14]')
    outputFile += "_" + "NoClusterCut_" + to_string (job_num) + ".root";
                  ~~~ ^ ~~~~~~~~~~~~~~~
root.exe: /sphenix/user/phnxbld/workarea/sPHENIX_SL7.3/gcc-12.1.0/root-6.26.06.p01/root-6.26.06/interpreter/llvm/src/tools/clang/lib/AST/DeclCXX.cpp:1391: clang::CXXMethodDecl* clang::CXXRecordDecl::getLambdaCallOperator() const: Assertion `!Calls.empty() && "Missing lambda call operator!"' failed.
